--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -1196,4 +1196,10 @@
   <data name="Menu_DoNotDisplay_Help" xml:space="preserve">
     <value>By default the rendering system automatically generates menus, if you need to manually render this, you can set to false.</value>
   </data>
+  <data name="AuthSingleuseToken_TokenNotFound" xml:space="preserve">
+    <value>Token not found in single use token request.</value>
+  </data>
+  <data name="AuthSingleuseToken_UserNotFound" xml:space="preserve">
+    <value>UserId not found in single use token request</value>
+  </data>
 </root>
