--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -1202,4 +1202,52 @@
   <data name="AuthSingleuseToken_UserNotFound" xml:space="preserve">
     <value>UserId not found in single use token request</value>
   </data>
+  <data name="CalendarEventType_Holiday" xml:space="preserve">
+    <value>Holiday</value>
+  </data>
+  <data name="CalendarEventType_Networking" xml:space="preserve">
+    <value>Networking </value>
+  </data>
+  <data name="CalendarEventType_Other" xml:space="preserve">
+    <value>Other</value>
+  </data>
+  <data name="CalendarEventType_OutOfOffice" xml:space="preserve">
+    <value>Out of Office</value>
+  </data>
+  <data name="CalendarEventType_UserGroup" xml:space="preserve">
+    <value>User Group</value>
+  </data>
+  <data name="CalendarEvent_Title" xml:space="preserve">
+    <value>Calendar Event</value>
+  </data>
+  <data name="Calendar_AllDay" xml:space="preserve">
+    <value>All Day</value>
+  </data>
+  <data name="Calendar_Date" xml:space="preserve">
+    <value>Date</value>
+  </data>
+  <data name="Calendar_Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="Calendar_End" xml:space="preserve">
+    <value>End Time</value>
+  </data>
+  <data name="Calendar_EventLink" xml:space="preserve">
+    <value>Event Link</value>
+  </data>
+  <data name="Calendar_EventType" xml:space="preserve">
+    <value>Event Type</value>
+  </data>
+  <data name="Calendar_EventType_Select" xml:space="preserve">
+    <value>-select event type-</value>
+  </data>
+  <data name="Calendar_ObjectDescription" xml:space="preserve">
+    <value>A Calendar Event is a date and time of an event of something we want to manage and keep track of for a company</value>
+  </data>
+  <data name="Calendar_ObjectTitle" xml:space="preserve">
+    <value>Calendar Event</value>
+  </data>
+  <data name="Calendar_Start" xml:space="preserve">
+    <value>Start Time</value>
+  </data>
 </root>
