--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -1256,4 +1256,43 @@
   <data name="Organization_LandingPage_Help" xml:space="preserve">
     <value>The default landing page for users logging in to NuvIoT is the standard portal that shows all the modules within NuvIoT for a user.  If you want to login to a different page, you can add the path here, the primary host name should still be https://www.nuviot.com though.</value>
   </data>
+  <data name="Organization_DefaultContributor" xml:space="preserve">
+    <value>Default Contributor</value>
+  </data>
+  <data name="Organization_DefaultContributor_Help" xml:space="preserve">
+    <value>The Default Contributor will be assigned to the project as the person who will be doing the work.  If your team is larger this will likely be changed as part of the task planning process.</value>
+  </data>
+  <data name="Organization_DefaultProjectAdminLead" xml:space="preserve">
+    <value>Default Project Admin Lead</value>
+  </data>
+  <data name="Organization_DefaultProjectAdminLead_Help" xml:space="preserve">
+    <value>The Default Project Admin Lead will be assigned as the default person on the project to ensure that things continue moving on the project and will check in on thats that are past their due date.</value>
+  </data>
+  <data name="Organization_DefaultProjectLead" xml:space="preserve">
+    <value>Default Project Lead</value>
+  </data>
+  <data name="Organization_DefaultProjectLead_Help" xml:space="preserve">
+    <value>The Default Project Lead is the person that will be the defalt person that is assged that will responsible for executing the projects within your organization, this can be changed when creating your project.  This default project lead is the default person that is assigned to a new task that ensure the work will get done, even though they may not complete it themselves.</value>
+  </data>
+  <data name="Organization_DefaultQAResource" xml:space="preserve">
+    <value>Default QA Resource</value>
+  </data>
+  <data name="Organization_DefaultQAResource_Help" xml:space="preserve">
+    <value>The Default QA Resource will be assigned to the project and be responsible for ensuring work is completed and does not have any issues.</value>
+  </data>
+  <data name="Organization_DefaultResource_Watermark" xml:space="preserve">
+    <value>-select resource-</value>
+  </data>
+  <data name="Organization_OrgStatuses_Active" xml:space="preserve">
+    <value>Active</value>
+  </data>
+  <data name="Organization_OrgStatuses_Deactivated" xml:space="preserve">
+    <value>Deactivated</value>
+  </data>
+  <data name="Organization_OrgStatuses_Spam" xml:space="preserve">
+    <value>Spam</value>
+  </data>
+  <data name="Organization_Owner" xml:space="preserve">
+    <value>Owner</value>
+  </data>
 </root>
