--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -1304,4 +1304,28 @@
   <data name="Common_TabletSupport" xml:space="preserve">
     <value>Display on Tablet</value>
   </data>
+  <data name="HelpResource_Description" xml:space="preserve">
+    <value>A Help Resource is content, either a Guide or a Web Page link that let's the user know how to perform a task within NuvIoT.</value>
+  </data>
+  <data name="HelpResource_DisplayInline" xml:space="preserve">
+    <value>Display Inline</value>
+  </data>
+  <data name="HelpResource_Guide" xml:space="preserve">
+    <value>Guide</value>
+  </data>
+  <data name="HelpResource_Link" xml:space="preserve">
+    <value>Link</value>
+  </data>
+  <data name="HelpResource_SelectGuide" xml:space="preserve">
+    <value>-select guide-</value>
+  </data>
+  <data name="HelpResource_Summary" xml:space="preserve">
+    <value>Summary</value>
+  </data>
+  <data name="HelpResource_Title" xml:space="preserve">
+    <value>Help Resource</value>
+  </data>
+  <data name="Module_HelpResources" xml:space="preserve">
+    <value>Help Resources</value>
+  </data>
 </root>
