--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -1370,4 +1370,7 @@
   <data name="Module_SortOrder" xml:space="preserve">
     <value>Sort Order</value>
   </data>
+  <data name="UiCategory_Icon" xml:space="preserve">
+    <value>Icon</value>
+  </data>
 </root>
