support for favorites

--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -1373,4 +1373,7 @@
   <data name="UiCategory_Icon" xml:space="preserve">
     <value>Icon</value>
   </data>
+  <data name="UiCategory_Icon_Select" xml:space="preserve">
+    <value>-select icon-</value>
+  </data>
 </root>
