--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -1412,4 +1412,10 @@
   <data name="Modules_Title" xml:space="preserve">
     <value>Modules</value>
   </data>
+  <data name="AppUser_SSN" xml:space="preserve">
+    <value>Social Security Number</value>
+  </data>
+  <data name="AppUser_SSN_Help" xml:space="preserve">
+    <value>Your Social Security Number is encrypted on the server.</value>
+  </data>
 </root>
