--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -1481,4 +1481,7 @@
   <data name="AuthenticationLogs_Title" xml:space="preserve">
     <value>Authentication Logs</value>
   </data>
+  <data name="AppUser_EmailSignature" xml:space="preserve">
+    <value>Email Signature</value>
+  </data>
 </root>
